--- a/contacto.html
+++ b/contacto.html
@@ -127,30 +127,36 @@
             </div>
             <div class="col-6 m-0 p-0">
               <div class="w-100">
-                <div class="py-2">
-                  <div class="f-comfortaa fsp-16 blanco py-1">Nombre:</div>
-                  <div class="w-100 hp-30 bgc-blanco rounded-p12"></div>
-                </div>
-                <div class="py-2">
-                  <div class="f-comfortaa fsp-16 blanco py-1">Empresa:</div>
-                  <div class="w-100 hp-30 bgc-blanco rounded-p12"></div>
-                </div>
-                <div class="py-2">
-                  <div class="f-comfortaa fsp-16 blanco py-1">Email:</div>
-                  <div class="w-100 hp-30 bgc-blanco rounded-p12"></div>
-                </div>
-                <div class="py-2">
-                  <div class="f-comfortaa fsp-16 blanco py-1">Teléfono:</div>
-                  <div class="w-100 hp-30 bgc-blanco rounded-p12"></div>
-                </div>
-                <div class="py-2">
-                  <div class="f-comfortaa fsp-16 blanco py-1">Mensaje:</div>
-                  <div class="w-100 hp-100 bgc-blanco rounded-p12"></div>
-                </div>
-
-                <div class="d-flex justify-content-center py-4">
-                  <button class="button-r f-comfortaa fsp-18 fw-700">Enviar</button>
-                </div>
+                <form id="formulario" class="" method="post">
+                  <div class="p-2">
+                    <label for="nombre" class="f-comfortaa fsp-16 blanco py-1">Nombre:</label>
+                    <input id="nombre" placeholder="Nombre Apellido"
+                      class="w-100 hp-30 no-decotext bgc-blanco rounded-p12 p-2"></input>
+                  </div>
+                  <div class="p-2">
+                    <label for="empresa" class="f-comfortaa fsp-16 blanco py-1">Empresa</label>
+                    <input id="empresa" placeholder="Nombre Empresa"
+                      class="w-100 hp-30 no-decotext bgc-blanco rounded-p12 p-2"></input>
+                  </div>
+                  <div class="p-2">
+                    <label for="email" class="f-comfortaa fsp-16 blanco py-1">Email</label>
+                    <input id="email" placeholder="nombre@email.com"
+                      class="w-100 hp-30 no-decotext bgc-blanco rounded-p12 p-2"></input>
+                  </div>
+                  <div class="p-2">
+                    <label for="teléfono" class="f-comfortaa fsp-16 blanco py-1">Teléfono</label>
+                    <input id="teléfono" placeholder="+569 8765 4321" tipe="number"
+                      class="w-100 hp-30 no-decotext bgc-blanco rounded-p12 p-2"></input>
+                  </div>
+                  <div class="p-2">
+                    <label for="mensaje" class="f-comfortaa fsp-16 blanco py-1">Mensaje</label>
+                    <textarea id="mensaje" placeholder="Redacta aquí tu mensaje"
+                      class="w-100 hp-200 no-decotext bgc-blanco rounded-p12 p-2"></textarea>
+                  </div>
+                  <div class="p-2">
+                    <input class="ms-30 me-auto button-r f-comfortaa fsp-18 fw-700" type="submit" value="Enviar">
+                  </div>
+                </form>
               </div>
             </div>
           </div>
@@ -172,8 +178,9 @@
 
 
 
+    <script src="js/form.js"></script>
 
-    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -182,6 +189,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
       integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous">
     </script>
+
 </body>
 
 </html>
