--- a/productos-servicios.html
+++ b/productos-servicios.html
@@ -103,7 +103,7 @@
       <div class="col-3 justify-content-center align-items-between border-0 bgc-blanco">
         <div id="abarrotes-btn" class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/abarrotes.png" class="hp-250 wp-250" />
-          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="abarrotes hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Abarrotes</div>
           </div>
@@ -112,7 +112,7 @@
       <div href="" class="col-3 justify-content-center align-items-between">
         <div id="carnes-btn" class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/carnes.png" class="hp-250 wp-250" />
-          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="carnes hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Carnes</div>
           </div>
@@ -121,16 +121,16 @@
       <div href="" class="col-3 justify-content-center align-items-between">
         <div id="licores-btn" class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/licores-bebidas.png" class="hp-250 wp-250" />
-          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
-          <div class="position-absolute translate-middle top-50 start-50 text-center">
+          <div class="licores hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="clasep position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Licores y bebidas</div>
           </div>
         </div>
       </div>
       <div href="" class="col-3 justify-content-center align-items-between">
-        <div id="vinos-btn"  class="d-flex flex-column justify-content-center py-4 position-relative">
+        <div id="vinos-btn" class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/vinos-espumante.png" class="hp-250 wp-250" />
-          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="vinos hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Vinos y espumantes</div>
           </div>
@@ -143,44 +143,12 @@
     <div class="mxwp-600 ms-auto me-auto text-center">
       <div class="f-comfortaa fsp-18">
         <div class="parrafo">
-        GENERAL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
-        lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
-      </div>
-      </div>
-    </div>
-  </div>
-  <!-- <div id="abarrotes" class=" abarrote-oculto oculto w-100 mxwp-1200 ms-auto me-auto">
-    <div class="mxwp-600 ms-auto me-auto text-center">
-      <div class="f-comfortaa fsp-18">
-        Abarrotes Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
-        lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
+          GENERAL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
+          lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
+        </div>
       </div>
     </div>
   </div>
-  <div id="carnes" class="oculto w-100 mxwp-1200 ms-auto me-auto">
-    <div class="mxwp-600 ms-auto me-auto text-center">
-      <div class="f-comfortaa fsp-18">
-        Carnes Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
-        lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
-      </div>
-    </div>
-  </div>
-  <div id="licores" class="oculto w-100 mxwp-1200 ms-auto me-auto">
-    <div class="mxwp-600 ms-auto me-auto text-center">
-      <div class="f-comfortaa fsp-18">
-        Licores y bebidas Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
-        lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
-      </div>
-    </div>
-  </div>
-  <div id="vinos" class="oculto w-100 mxwp-1200 ms-auto me-auto">
-    <div class="mxwp-600 ms-auto me-auto text-center">
-      <div class="f-comfortaa fsp-18">
-        Vinos y espumantes Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
-        lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
-      </div>
-    </div>
-  </div> -->
   <div class="d-flex justify-content-center py-4">
     <a href="contacto.html" class="button-r f-comfortaa fsp-18 fw-700">Cotiza con nosotros</a>
   </div>
@@ -194,7 +162,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous">
   </script>
-  <script src="js/app.js"></script>
+  <script src="js/productos.js"></script>
 </body>
 
 </html>
