--- a/index.html
+++ b/index.html
@@ -40,74 +40,105 @@
 </head>
 
 <body>
-  <!-- HEADER -->
-  <div class="d-flex justify-content-center">
-    <div class="w-100 mxwp-2400 hp-180 d-flex justify-content-between px-5 align-items-center">
-
-      <a href="index.html" class="d-flex align-items-center no-decotext link-menu">
-        <div class="mxhp-90 mxwp-90">
-          <img src="media/logo-simple.png" class="w-100 h-180" />
-        </div>
-        <div class="d-flex flex-column psp-10 no-decotext link-menu">
-          <span class="f-comfortaa fsp-17 fw-700">Comercializadora y Distribuidora</span>
-          <span class="f-comfortaa fsp-17 fw-700">San Pancracio</span>
-        </div>
-      </a>
-
-      <div class=" menu border-3 border-start-0 border-end-0">
-        <div class="d-flex justify-content-between align-content-center">
-          <div class="m-0"><span class="dot"></span></div>
-          <div class="d-flex justify-content-between align-content-center ">
-            <a href="index.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Inicio</a>
-          </div>
-          <div class="m-0"><span class="dot"></span></div>
-          <div class="d-flex justify-content-between align-content-center ">
-            <a href="nosotros.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Nosotros</a>
-          </div>
-          <div class="m-0"><span class="dot"></span></div>
-          <div class="d-flex justify-content-between align-content-center ">
-            <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y
-              servicios</a>
-          </div>
-          <div class="m-0"><span class="dot"></span></div>
-          <div class="d-flex justify-content-between align-content-center ">
-            <a href="contacto.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Cotiza con nosotros</a>
-          </div>
-          <div class="m-0"><span class="dot"></span></div>
-        </div>
-      </div>
-
+  <div class="position-relative">
+    <div id="burgerContent" class="burger-content">
       <div class="">
-        <a href="https://wa.me/934195071?text=Hola.%20Quisiera%20cotizar%20con%20ustedes.%20"
-          class="d-flex justify-content-start align-items-center link-menu py-1">
-          <div><img src="media/wzp.png" class="hp-40 wp-40" /></div>
-          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu">+56 9 3419 5071</div>
-        </a>
-        <a href="mailto:ventas@spcomercial.cl"
-          class="d-flex justify-content-end align-items-center py-1 link-menu no-decotext">
-          <div><img src="media/mailto.png" class="hp-40 wp-40" /></div>
-          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div>
-        </a>
+        <a href="index.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Inicio</a>
       </div>
-
+      <div class="">
+        <a href="nosotros.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Nosotros</a>
+      </div>
+      <div class="">
+        <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y
+          servicios</a>
+      </div>
+      <div class="">
+        <a href="contacto.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Cotiza con nosotros</a>
+      </div>
     </div>
-  </div>
+    <!-- HEADER -->
+    <div class="d-flex justify-content-center">
+      <div
+        class="w-100 mxwp-2400 header-height d-flex justify-content-between responsive-header border-header align-items-center">
+
+        <div class="d-flex justify-content-between align-items-center h-100 w-100">
+          <a href="index.html" class="d-flex align-items-center h-100 no-decotext link-menu header-element-responsive">
+            <div class="mxhp-90 mxwp-90">
+              <img src="media/logo-simple.png" class="w-100 h-180" />
+            </div>
+            <div class="d-flex flex-column psp-10 no-decotext link-menu">
+              <span class="f-comfortaa fsp-17 fw-700">Comercializadora y Distribuidora</span>
+              <span class="f-comfortaa fsp-17 fw-700">San Pancracio</span>
+            </div>
+          </a>
+          <div class="burger-900">
+            <button id="hamburguesa" class="hamburguesa">
+              <div id="lineaUno" class="linea1">
+                <div id="lineafle1" class="linea"></div>
+              </div>
+              <div class="linea2">
+                <div class="linea"></div>
+              </div>
+              <div id="lineaTres" class="linea3">
+                <div id="lineafle3" class="linea"></div>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="menu border-3 border-start-0 border-end-0 header-element-responsive menu-900 mbp-40">
+          <div class="d-flex justify-content-between align-content-center">
+            <div class="m-0"><span class="dot"></span></div>
+            <div class="d-flex justify-content-between align-content-center ">
+              <a href="index.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Inicio</a>
+            </div>
+            <div class="m-0"><span class="dot"></span></div>
+            <div class="d-flex justify-content-between align-content-center ">
+              <a href="nosotros.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Nosotros</a>
+            </div>
+            <div class="m-0"><span class="dot"></span></div>
+            <div class="d-flex justify-content-between align-content-center ">
+              <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y
+                servicios</a>
+            </div>
+            <div class="m-0"><span class="dot"></span></div>
+            <div class="d-flex justify-content-between align-content-center ">
+              <a href="contacto.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Cotiza con nosotros</a>
+            </div>
+            <div class="m-0"><span class="dot"></span></div>
+          </div>
+        </div>
+
+        <div id="contact-fullscreen" class="contact-fullscreen">
+          <a href="https://wa.me/934195071?text=Hola.%20Quisiera%20cotizar%20con%20ustedes.%20"
+            class="d-flex justify-content-start align-items-center link-menu py-1">
+            <div><img src="media/wzp.png" class="hp-40 wp-40" /></div>
+            <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu">+56 9 3419 5071</div>
+          </a>
+          <a href="mailto:ventas@spcomercial.cl"
+            class="d-flex justify-content-end align-items-center py-1 link-menu no-decotext">
+            <div><img src="media/mailto.png" class="hp-40 wp-40" /></div>
+            <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div>
+          </a>
+        </div>
+
+      </div>
+    </div>
   </div>
   <!-- CONTENT -->
 
   <div class="position-relative">
 
-    <div id="" class="">
-      <div class="">
-        <div class="">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
           <img src="media/banner_01.png" class="d-block w-100 op-030 mxhp-350 w-100 ob-cover" alt="...">
         </div>
-        <!-- <div class="carousel-item">
+        <div class="carousel-item">
           <img src="media/banner_02.png" class="d-block w-100 op-030 mxhp-350 w-100 ob-cover" alt="...">
         </div>
         <div class="carousel-item">
           <img src="media/banner_03.png" class="d-block w-100 op-030 mxhp-350 w-100 ob-cover" alt="...">
-        </div> -->
+        </div>
       </div>
     </div>
 
@@ -202,6 +233,7 @@
 
     </div>
   </div>
+  </div>
   <!-- FIRMA -->
   <a href="https://aldocarquin.github.io/" class="no-decotext">
     <div class="bgc-negro w-100 ptp-15 pbp-15 d-flex justify-content-center">
@@ -211,6 +243,7 @@
   </a>
 
   <script src="js/index.js"></script>
+  <script src="js/burger.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
   </script>
